# gst-template

gst-plugin/: Makefile  ac-compile.sh  configure.ac
gst-plugin/src/: Makefile  Makefile.am  dummy_cpp_file.c++  gstmyfilter.c  gstmyfilter.cc  gstmyfilter.h  libanttest.la  libanttest_la-gstmyfilter.lo
gst-plugin/src/.deps/: libanttest_la-dummy_cpp_file.Plo  libanttest_la-gstmyfilter.Plo  libgstplugin_la-gstplugin.Plo
gst-plugin/src/.libs/: libanttest.la  libanttest.lai
